--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.overlay-content {
+  display: flex;
+  width: 100%;
+  left: 0;
+  top: 0;
+  align-items: center;
+  height: 100%;
+  justify-content: center;
+  position: fixed;
+  z-index: 999999;
+  background: rgba(10, 23, 55, 0.5);
+  flex-direction: column;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.overlay-content .wrapper {
+  display: inherit;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.overlay-content .wrapper .message {
+  margin-top: 20px;
+  color: white;
+  font-weight: bold;
+  text-shadow: 0 2px 5px black;
+}
+
+/* react-spinner-material */
+.sk-spinner.pacman > div:nth-child(n + 3):nth-child(-n + 5) {
+  color: white;
+  z-index: -1;
 }
